--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "run": "next start"
   },
-  "dependencies":{
+  "dependencies": {
+    "babel-plugin-inline-react-svg": "^0.4.0",
     "next": "latest",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
