--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "avatar-splash-page",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "ISC",
-  "author": "",
   "scripts": {
-    "start": "next",
+    "dev": "next dev",
     "build": "next build",
-    "run": "next start"
+    "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "6.7.6",
     "babel-plugin-inline-react-svg": "^0.4.0",
+    "babel-plugin-module-resolver": "2.5.0",
+    "babel-plugin-wrap-in-js": "^1.1.0",
+    "glob": "7.1.1",
     "next": "latest",
+    "node-sass": "^4.4.0",
+    "normalize.css": "5.0.0",
+    "postcss-easy-import": "2.0.0",
+    "postcss-loader": "1.3.3",
+    "raw-loader": "^0.5.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "sass-loader": "^4.1.1"
   },
   "devDependencies": {
-    "babel-plugin-css-modules-transform": "^1.2.1",
-    "node-sass": "^4.5.0",
-    "postcss": "^5.2.16",
-    "postcss-cssnext": "^2.10.0"
+    "now": "^3.1.0"
   }
 }
