--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,9 @@
 {
-  "plugins": [
-    ["inline-react-svg"],
-    [
-      "module-resolver", {
-        "root": ["."],
-        "alias": {
-          "fonts": "./static/fonts",
-          "styles": "./styles"
-        },
-        "cwd": "babelrc"
-    }],
-    [
-      "wrap-in-js",
-      {
-        "extensions": ["css$", "scss$"]
-      }
-    ]
-  ],
   "presets": [
     "next/babel"
   ],
-  "ignore": []
+  "plugins": [
+    ["inline-react-svg"],
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
+  ]
 }
