--- a/package.json
+++ b/package.json
@@ -2,27 +2,17 @@
   "name": "avatar-splash-page",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "6.7.6",
     "babel-plugin-inline-react-svg": "^0.4.0",
-    "babel-plugin-module-resolver": "2.5.0",
-    "babel-plugin-wrap-in-js": "^1.1.0",
-    "glob": "7.1.1",
+    "babel-plugin-styled-components": "^1.2.0",
     "next": "latest",
-    "node-sass": "^4.4.0",
-    "normalize.css": "5.0.0",
-    "postcss-easy-import": "2.0.0",
-    "postcss-loader": "1.3.3",
-    "raw-loader": "^0.5.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "sass-loader": "^4.1.1"
-  },
-  "devDependencies": {
-    "now": "^3.1.0"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.2",
+    "styled-normalize": "^2.2.1"
   }
 }
