--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.4.0",
     "babel-plugin-styled-components": "^1.2.0",
-    "next": "latest",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "next": "^4.2.0-canary.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "styled-components": "^2.1.2",
     "styled-normalize": "^2.2.1"
   }
