--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,18 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+  "presets": ["next/babel"],
   "plugins": [
     ["inline-react-svg"],
-    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
-  ]
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ]
+  ],
+  "env": {
+    "development": {
+      "plugins": ["inline-dotenv"]
+    },
+    "production": {
+      "plugins": ["transform-inline-environment-variables"]
+    }
+  }
 }
