--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "babel-plugin-inline-react-svg": "^0.4.0",
-    "babel-plugin-styled-components": "^1.2.0",
-    "next": "^4.2.0-canary.1",
+    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-styled-components": "^1.5.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.2.0",
+    "contentful": "^5.0.5",
+    "next": "^4.2.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "styled-components": "^2.1.2",
+    "styled-components": "^3.0.2",
     "styled-normalize": "^2.2.1"
   }
 }
