--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avatar-splash-page",
+  "name": "avatar",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -14,6 +14,7 @@
     "next": "^4.2.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-markdown": "^3.1.4",
     "styled-components": "^3.0.2",
     "styled-normalize": "^2.2.1"
   }
