--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-markdown": "^3.1.4",
+    "react-slick": "^0.16.0",
     "styled-components": "^3.0.2",
     "styled-normalize": "^2.2.1"
   }
