--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-styled-components": "^1.5.0",
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "contentful": "^5.0.5",
+    "lodash": "^4.17.4",
     "next": "^4.2.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
