--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-styled-components": "^1.5.0",
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
-    "contentful": "^5.0.5",
-    "lodash": "^4.17.4",
-    "next": "^4.2.3",
+    "contentful": "^5.1.1",
+    "lodash": "^4.17.5",
+    "next": "^5.0.0",
+    "nprogress": "^0.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-markdown": "^3.1.4",
-    "react-slick": "^0.17.1",
-    "styled-components": "^3.1.5",
-    "styled-normalize": "^3.0.1"
+    "react-markdown": "^3.2.0",
+    "react-slick": "^0.18.1",
+    "styled-components": "^3.1.6",
+    "styled-normalize": "^4.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^3.11.0"
   }
 }
