--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production next start"
+    "start": "NODE_ENV=production next start",
+    "deploy": "now && now alias && now rm avatar --safe --yes"
   },
   "dependencies": {
     "babel-plugin-inline-dotenv": "^1.1.2",
