--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,82 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
+
 jobs:
+  # The build job
   build:
+    working_directory: ~/project
     docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+      - image: circleci/node:8.11.4-browsers
     steps:
+      # Checkout the code from the branch into the working_directory
       - checkout
-
-      # Download and cache dependencies
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      # Restore local dependencies from cache
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
-      - run: yarn install
-
+      # Install project dependencies
+      - run:
+          name: Install local dependencies
+          command: npm install
+      # Build project
+      - run:
+          name: Build for production
+          command: npm run build
+      # Cache local dependencies if they don't exist
       - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      # - run: yarn test
+  # The deploy job
+  deploy:
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:8.11.4-browsers
+    steps:
+      - checkout
+      # build folder that needs to be deployed
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      # Add the dist folder in github repo
+      - run:
+          name: Commit folder
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config --global user.email "mikecicc@gmail.com"
+            git config --global user.name "michael ciccarelli"
+            git add .
+            git commit -m "added dist folder from cache for the deployment"
+      # Install AWS cli
+      - run:
+          name: Install aws cli and python-pip
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install python-pip python-dev build-essential
+            sudo pip install awsebcli --upgrade
+      # Deploy to the Elastic Beanstalk corresponding to the current branch
+      - run:
+          name: Deploy on AWS EB
+          command: |
+            eb deploy --timeout 60
 
-      - run: npm run build && npm run start
+workflows:
+  version: 2
+  # The build and deploy workflow
+  build_and_deploy:
+    jobs:
+      - build
+      # The deploy job will only run on the filtered branches and
+      # require the build job to be successful before it starts
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
