--- a/.ebextensions/node-settings.config
+++ b/.ebextensions/node-settings.config
@@ -1,16 +1,3 @@
-branch-defaults:
-  master:
-    environment: Avatar-env
-global:
-  application_name: avatar
-  branch: null
-  default_ec2_keyname: null
-  default_platform: Node.js
-  default_region: us-east-1
-  include_git_submodules: true
-  instance_profile: null
-  platform_name: null
-  platform_version: null
-  repository: null
-  sc: git
-  workspace_type: Application
+option_settings:
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm start"
