--- a/.ebextensions/node-settings.config
+++ b/.ebextensions/node-settings.config
@@ -1,3 +1,9 @@
-option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: 'npm start'
+{
+  "option_settings": [
+    {
+      "namespace": "aws:elasticbeanstalk:container:nodejs",
+      "option_name": "NodeCommand",
+      "value": "npm start"
+    }
+  ]
+}
