--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,16 +1,19 @@
 branch-defaults:
   master:
     environment: Avatar-env
+environment-defaults:
+  Avatar-env:
+    branch: null
+    repository: null
 global:
   application_name: avatar
-  branch: null
   default_ec2_keyname: null
   default_platform: Node.js
-  default_region: us-east-1
+  default_region: us-west-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
-  repository: null
+  profile: null
   sc: git
   workspace_type: Application
