add env vars to next config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "contentful": "^7.0.1",
+    "dotenv": "^6.1.0",
     "lodash": "^4.17.10",
     "next": "^6.1.1",
     "nprogress": "^0.2.0",
