--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,14 +48,14 @@ jobs:
       - restore_cache:
           key: v1-next-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Add the dist folder in github repo
-      - run:
-          name: Commit folder
-          command: |
-            git config credential.helper 'cache --timeout=120'
-            git config --global user.email "mikecicc@gmail.com"
-            git config --global user.name "michael ciccarelli"
-            git add .
-            git commit -m "added dist folder from cache for the deployment"
+      # - run:
+      #     name: Commit folder
+      #     command: |
+      #       git config credential.helper 'cache --timeout=120'
+      #       git config --global user.email "mikecicc@gmail.com"
+      #       git config --global user.name "michael ciccarelli"
+      #       git add .
+      #       git commit -m "added dist folder from cache for the deployment"
       # Install AWS cli
       - run:
           name: Install aws cli and python-pip
