--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,9 @@ jobs:
           command: npm run test
       # Cache the build folders for the deploy job
       - save_cache:
-          key: v1-next-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - .next
+            - dist
   deploy:
     working_directory: ~/project
     docker:
@@ -46,16 +46,16 @@ jobs:
       - checkout
       # build folder that needs to be deployed
       - restore_cache:
-          key: v1-next-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Add the dist folder in github repo
-      # - run:
-      #     name: Commit folder
-      #     command: |
-      #       git config credential.helper 'cache --timeout=120'
-      #       git config --global user.email "mikecicc@gmail.com"
-      #       git config --global user.name "michael ciccarelli"
-      #       git add .
-      #       git commit -m "added dist folder from cache for the deployment"
+      - run:
+          name: Commit folder
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config --global user.email "mikecicc@gmail.com"
+            git config --global user.name "michael ciccarelli"
+            git add .
+            git commit -m "added dist folder from cache for the deployment"
       # Install AWS cli
       - run:
           name: Install aws cli and python-pip
