--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             git config credential.helper 'cache --timeout=120'
             git config --global user.email "mikecicc@gmail.com"
             git config --global user.name "michael ciccarelli"
-            git add .
+            git add -f dist
             git commit -m "added dist folder from cache for the deployment"
       # Install AWS cli
       - run:
