--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
 version: 2
+
 jobs:
+  # The build job
   build:
     working_directory: ~/project
     docker:
-      - image: circleci/node:8.11.4-browsers
+      - image: circleci/node:6.10-browsers
     steps:
       # Checkout the code from the branch into the working_directory
       - checkout
@@ -38,32 +40,26 @@ jobs:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - dist
+
+  # The deploy job
   deploy:
     working_directory: ~/project
     docker:
-      - image: circleci/node:8.11.4-browsers
+      - image: circleci/node:6.10-browsers
     steps:
       - checkout
       # build folder that needs to be deployed
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      # Install project dependencies
-      - run:
-          name: Install local dependencies
-          command: npm install
-      # Build project
-      # - run:
-      #     name: Build for production
-      #     command: npm run build
       # Add the dist folder in github repo
-      # - run:
-      #     name: Commit folder
-      #     command: |
-      #       git config credential.helper 'cache --timeout=120'
-      #       git config --global user.email "mikecicc@gmail.com"
-      #       git config --global user.name "michael ciccarelli"
-      #       git add -f dist
-      #       git commit -m "added dist folder from cache for the deployment"
+      - run:
+          name: Commit folder
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config --global user.email "mikecicc@gmail.com"
+            git config --global user.name "michael ciccarelli"
+            git add .
+            git commit -m "added dist folder from cache for the deployment"
       # Install AWS cli
       - run:
           name: Install aws cli and python-pip
@@ -80,6 +76,7 @@ jobs:
 
 workflows:
   version: 2
+  # The build and deploy workflow
   build_and_deploy:
     jobs:
       - build
