--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
           name: Show current branch
           command: echo ${CIRCLE_BRANCH}
       # Restore local dependencies from cache
-      # - restore_cache:
-      #     keys:
-      #       - v1-dependencies-{{ checksum "package.json" }}
-      #       - v1-dependencies-
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       # Install project dependencies
       - run:
           name: Install local dependencies
@@ -27,19 +27,19 @@ jobs:
           name: Build for production
           command: npm run build
       # Cache local dependencies if they don't exist
-      # - save_cache:
-      #     key: v1-dependencies-{{ checksum "package.json" }}
-      #     paths:
-      #       - node_modules
+      - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       # Test the source code
       - run:
           name: Run Tests
           command: npm run test
       # Cache the build folders for the deploy job
-      # - save_cache:
-      #     key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      #     paths:
-      #       - dist
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - dist
 
   # The deploy job
   deploy:
@@ -47,18 +47,10 @@ jobs:
     docker:
       - image: circleci/node:8.11.4-browsers
     steps:
-      # Install project dependencies
-      - run:
-          name: Install local dependencies
-          command: npm install
-      # Build project
-      - run:
-          name: Build for production
-          command: npm run build
-      # - checkout
-      # # build folder that needs to be deployed
-      # - restore_cache:
-      #     key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - checkout
+      # build folder that needs to be deployed
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Add the dist folder in github repo
       # - run:
       #     name: Commit folder
@@ -68,6 +60,14 @@ jobs:
       #       git config --global user.name "michael ciccarelli"
       #       git add .
       #       git commit -m "added dist folder from cache for the deployment"
+      # Install project dependencies
+      - run:
+          name: Install local dependencies
+          command: npm install
+      # Build project
+      - run:
+          name: Build for production
+          command: npm run build
       # Install AWS cli
       - run:
           name: Install aws cli and python-pip
