--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "NODE_ENV=production next start",
+    "buildnstart": "npm run build && npm run start",
     "test": "echo 'no tests to run...'"
   },
   "dependencies": {
