--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,22 +52,14 @@ jobs:
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Add the dist folder in github repo
-      # - run:
-      #     name: Commit folder
-      #     command: |
-      #       git config credential.helper 'cache --timeout=120'
-      #       git config --global user.email "mikecicc@gmail.com"
-      #       git config --global user.name "michael ciccarelli"
-      #       git add .
-      #       git commit -m "added dist folder from cache for the deployment"
-      # Install project dependencies
       - run:
-          name: Install local dependencies
-          command: npm install
-      # Build project
-      - run:
-          name: Build for production
-          command: npm run build
+          name: Commit folder
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config --global user.email "mikecicc@gmail.com"
+            git config --global user.name "michael ciccarelli"
+            git add --force dist
+            git commit -m "added dist folder from cache for the deployment"
       # Install AWS cli
       - run:
           name: Install aws cli and python-pip
