--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,15 +1,15 @@
 branch-defaults:
   master:
-    environment: Avatar-env
+    environment: AvatarProduction-env
 environment-defaults:
-  Avatar-env:
+  AvatarProduction-env:
     branch: null
     repository: null
 global:
-  application_name: avatar
+  application_name: avatar-production
   default_ec2_keyname: null
   default_platform: Node.js
-  default_region: us-west-2
+  default_region: us-east-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
