--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     working_directory: ~/project
     docker:
-      - image: circleci/node:8.11.4-browsers
+      - image: circleci/node:10-jessie-browsers
     steps:
       # Checkout the code from the branch into the working_directory
       - checkout
@@ -45,7 +45,7 @@ jobs:
   deploy:
     working_directory: ~/project
     docker:
-      - image: circleci/node:9-jessie
+      - image: circleci/node:10-jessie-browsers
     steps:
       - checkout
       # build folder that needs to be deployed
